# NBTV-TXCVR

./: CMakeLists.txt  LICENSE.md  TODO.md  oldtv.cpp
.VSCodeCounter/2023-10-13_13-21-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
gnuradio/: nbtv_rx.grc  nbtv_rx_epy_block_0.py  nbtv_tx.grc
src/: audiodialog.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modes.h
src/dialogs/: audiodialog.cpp  audiodialog.h  audiodialog.ui  radiodialog.cpp  radiodialog.h  radiodialog.ui  videodialog.cpp  videodialog.h  videodialog.ui
src/dsp/: transform.cpp  transform.h
src/nbtv/: modes.cpp  modes.h  receive.cpp  receive.h  transmit.cpp  transmit.h
src/util/: log.cpp  log.h
